--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-Definition lists can be used with HTML syntax. Name Godzilla Born 1952 Birthplace Japan Color Green
+---
+layout: home
+author_profile: true
+---
